allow different java and java args